--- a/style.css
+++ b/style.css
@@ -18,9 +18,8 @@ body {
 h1 {
   margin: 10px;
 }
-
 .box {
-  background-color: steelblue;
+  background-color: rgb(15, 231, 202);
   color: #fff;
   display: flex;
   align-items: center;
@@ -32,16 +31,14 @@ h1 {
   box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.3);
   transform: translateX(400%);
   transition: transform 0.4s ease;
+  
 }
-
 .box:nth-of-type(even) {
   transform: translateX(-400%);
 }
-
 .box.show {
   transform: translateX(0);
 }
-
 .box h2 {
   font-size: 45px;
 }
